--- a/Pagination/Base.lproj/Main.storyboard
+++ b/Pagination/Base.lproj/Main.storyboard
@@ -5,14 +5,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Photo View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pagination" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PhotoViewController" customModule="Pagination" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -34,7 +33,7 @@
                     <navigationItem key="navigationItem" id="8vK-oc-Tde">
                         <barButtonItem key="rightBarButtonItem" title="CollectionView &gt;" id="tft-1v-BFd">
                             <connections>
-                                <segue destination="Sbu-g3-QmO" kind="show" id="r7p-yS-vS9"/>
+                                <segue destination="H7m-Pz-EdX" kind="show" id="CVr-FI-HnH"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -46,49 +45,21 @@
             </objects>
             <point key="canvasLocation" x="1952.1739130434785" y="116.51785714285714"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="rOI-5p-HR6">
+        <!--Photo View Controller2-->
+        <scene sceneID="bOC-xi-FJD">
             <objects>
-                <viewController id="Sbu-g3-QmO" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wPg-mH-RZ4">
+                <viewController id="H7m-Pz-EdX" customClass="PhotoViewController2" customModule="Pagination" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wXP-cd-uov">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="thg-9Z-ODg">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="911-fZ-bpN">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="4U2-a2-gMz">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2Ck-db-5gr">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="vJu-Vk-TuX"/>
+                        <viewLayoutGuide key="safeArea" id="K1j-eS-mCg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="thg-9Z-ODg" secondAttribute="trailing" id="DwT-7v-T5y"/>
-                            <constraint firstItem="thg-9Z-ODg" firstAttribute="leading" secondItem="wPg-mH-RZ4" secondAttribute="leading" id="H1h-nH-VTK"/>
-                            <constraint firstAttribute="bottom" secondItem="thg-9Z-ODg" secondAttribute="bottom" id="boh-VN-eeN"/>
-                            <constraint firstItem="thg-9Z-ODg" firstAttribute="top" secondItem="wPg-mH-RZ4" secondAttribute="top" id="nKY-Gf-tge"/>
-                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ru3-EM-Zsc"/>
+                    <navigationItem key="navigationItem" id="Cqp-kJ-UU9"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x9e-nQ-q88" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R3D-ZO-ROu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2693" y="117"/>
+            <point key="canvasLocation" x="2680" y="117"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="WQI-QH-z8L">
